# Signal-Flow-Solver

./: .gitignore  LICENSE  README.md  app.spec  my_app.spec
Signal_Flow_solver/: Signal_Flow_solver.sln
Signal_Flow_solver/Signal_Flow_solver/: Signal_Flow_solver.vcxproj
Signal_Flow_solver/Signal_flow/: .gitignore  CMakeLists.txt  main.cpp
Signal_Flow_solver/Signal_flow/core/: Application.cpp  core.sln  core.vcxproj  core.vcxproj.filters
Signal_Flow_solver/Signal_flow/core/headers/algorithms/: DFS.h  NonTouched.h  SystemResults.h
Signal_Flow_solver/Signal_flow/core/headers/logic/: DFS.h  ForwardPaths.h  Loops.h
Signal_Flow_solver/Signal_flow/core/headers/models/: Graph.h  path.h
Signal_Flow_solver/Signal_flow/core/src/algorithms/: DFS.cpp  NonTouched.cpp  SystemResults.cpp
Signal_Flow_solver/Signal_flow/core/src/logic/: DFS.cpp  ForwardPaths.cpp  Loops.cpp
Signal_Flow_solver/Signal_flow/core/src/models/: Graph.cpp  path.cpp
Signal_Flow_solver/Signal_flow/headers/widgets/: canvas.h  gain_input_dialog.h  output.h  toolbar.h  validation_dialog.h  workspace.h
Signal_Flow_solver/Signal_flow/headers/windows/: mainwindow.h
Signal_Flow_solver/Signal_flow/src/widgets/: canvas.cpp  gain_input_dilaog.cpp  output.cpp  toolbar.cpp  validation_dialog.cpp  workspace.cpp
Signal_Flow_solver/Signal_flow/src/windows/: mainwindow.cpp
Signal_Flow_solver/build-Signal_flow-Desktop_Qt_6_5_1_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
Signal_Flow_solver/build-Signal_flow-Desktop_Qt_6_5_1_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
Signal_Flow_solver/build-Signal_flow-Desktop_Qt_6_5_1_MinGW_64_bit-Release/Signal_flow_autogen/: deps  mocs_compilation.cpp
System_Stability_Check/: app.py  build.py
System_Stability_Check/AutomatedTesting/: Checker.py  InputGenerator.py  Testing.py  __init__.py
System_Stability_Check/Engine/: engine.py  tempCodeRunnerFile.py
System_Stability_Check/UnitTesting/: engine_test.py  tempCodeRunnerFile.py
executables/signal flow solver/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  qtcsettings.cmake
executables/signal flow solver/.qt/: QtDeploySupport.cmake
executables/signal flow solver/Signal_flow_autogen/: deps
(+116 files in other folders)
